* Version 0.7.1
  * New: "execX=..." in configuration, launch external programs.
  * Bug fix: Quotation marks detection in config file, samples:
    eth0=tuntap,"LAN-Connection 14",00:11:22:33:44:55
    cofs0="C:\My files"
  * Bug fix: Crash at open /dev/ttyS*.
    New: "ttysX=..." in configuration, launch coserial daemon.
    New parameters "-f DeviceName -m Mode" for colinux-serial-daemon.
    Serial daemon is light usable under WinNT, you can login on /dev/ttyS0
    or redirect serial communication port (COM1 for sample).
  * Bug fix: Crash, if walking in big directory of cofs with
    "find | xargs file" or updatedb. (unicode maxlen)
  * Bug fix: Buffer overrun, on Fontname for FLTK console or screen resize.
  * Update libraries:
    MinGW from 3.7 to 3.9
    w32api from 3.2 to 3.4
    WinPcap from 3.1-beta4 to 3.1
    FLTK from 1.1.4 to 1.1.6
    Remove all XML libraries from source.
  * TAP device version 8.3, usable without admin rights.
  * Bridged allows empty name for autosearch connected LAN interface.
    New option promisc/nopromisc.
  * Kernel 2.6.12
  * New option for colinux-debug-daemon: '-e exitcode'
    Translate a given exitcode into error text, filename and line number.
  * Shutdown the service, if Windows is shutting down.
  * Print human readable error, if wrong linux.sys installed.
  * Print error on console, if initrd can't load.
  * SLiRP get DNS dymanicly from host. Refresh if expire 10 Sec.
    This should better work for dialup connections.
  * SLiRP ping, if destination supports UDP echo/7 (WSAECONNRESET hack).
  * Build scripts ash/dash compliant (more POSIX-compliant)
  * Checkbox to view README.TXT after install finish.
  * Bug #1151757: COFS disallow mutiple mounts.
  * Introduce a new build system:
     bin/make.py colinux
     - Automatic awareness of changes in header files.
     - Doesn't require 'make clean' between compilation of 
       different coLinux ports.
     - Clean, flexible and easier to maintain.